// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pull-request-handler comments on a pull request 1`] = `
Object {
  "body": "## I am an example title

https://github.com/JasonEtco/tests/blob/1409a3f61a27fe80a7170026fd73eaa2108a0108/.travis.yml#L10-L15

---

###### This comment was generated by [todo](https://todo.jasonet.co) based on a \`TODO\` comment in 1409a3f61a27fe80a7170026fd73eaa2108a0108 in #32. cc @JasonEtco.",
}
`;

exports[`pull-request-handler comments on a pull request and mentions the assigned user 1`] = `
Object {
  "body": "## I am an example title

https://github.com/JasonEtco/tests/blob/1409a3f61a27fe80a7170026fd73eaa2108a0108/.travis.yml#L10-L15

---

###### This comment was generated by [todo](https://todo.jasonet.co) based on a \`TODO\` comment in 1409a3f61a27fe80a7170026fd73eaa2108a0108 in #32. cc @matchai",
}
`;

exports[`pull-request-handler comments on a pull request and mentions the assigned users 1`] = `
Object {
  "body": "## I am an example title

https://github.com/JasonEtco/tests/blob/1409a3f61a27fe80a7170026fd73eaa2108a0108/.travis.yml#L10-L15

---

###### This comment was generated by [todo](https://todo.jasonet.co) based on a \`TODO\` comment in 1409a3f61a27fe80a7170026fd73eaa2108a0108 in #32. cc @JasonEtco, @matchai and @defunkt",
}
`;

exports[`pull-request-handler creates a comment with a body line 1`] = `
Object {
  "body": "## I am an example title

Don&#x27;t forget about this body text!

---

https://github.com/JasonEtco/tests/blob/1409a3f61a27fe80a7170026fd73eaa2108a0108/.travis.yml#L10-L15

---

###### This comment was generated by [todo](https://todo.jasonet.co) based on a \`TODO\` comment in 1409a3f61a27fe80a7170026fd73eaa2108a0108 in #32. cc @JasonEtco.",
}
`;

exports[`pull-request-handler creates many (5) comments 1`] = `
Object {
  "body": "## Title number 1

https://github.com/JasonEtco/tests/blob/1409a3f61a27fe80a7170026fd73eaa2108a0108/file.txt#L4

---

###### This comment was generated by [todo](https://todo.jasonet.co) based on a \`TODO\` comment in 1409a3f61a27fe80a7170026fd73eaa2108a0108 in #32. cc @JasonEtco.",
}
`;

exports[`pull-request-handler creates many (5) comments 2`] = `
Object {
  "body": "## Title number 2

https://github.com/JasonEtco/tests/blob/1409a3f61a27fe80a7170026fd73eaa2108a0108/file.txt#L4

---

###### This comment was generated by [todo](https://todo.jasonet.co) based on a \`TODO\` comment in 1409a3f61a27fe80a7170026fd73eaa2108a0108 in #32. cc @JasonEtco.",
}
`;

exports[`pull-request-handler creates many (5) comments 3`] = `
Object {
  "body": "## Title number 3

https://github.com/JasonEtco/tests/blob/1409a3f61a27fe80a7170026fd73eaa2108a0108/file.txt#L4

---

###### This comment was generated by [todo](https://todo.jasonet.co) based on a \`TODO\` comment in 1409a3f61a27fe80a7170026fd73eaa2108a0108 in #32. cc @JasonEtco.",
}
`;

exports[`pull-request-handler creates many (5) comments 4`] = `
Object {
  "body": "## Title number 4

https://github.com/JasonEtco/tests/blob/1409a3f61a27fe80a7170026fd73eaa2108a0108/file.txt#L4

---

###### This comment was generated by [todo](https://todo.jasonet.co) based on a \`TODO\` comment in 1409a3f61a27fe80a7170026fd73eaa2108a0108 in #32. cc @JasonEtco.",
}
`;

exports[`pull-request-handler creates many (5) comments 5`] = `
Object {
  "body": "## Title number 5

https://github.com/JasonEtco/tests/blob/1409a3f61a27fe80a7170026fd73eaa2108a0108/file.txt#L4

---

###### This comment was generated by [todo](https://todo.jasonet.co) based on a \`TODO\` comment in 1409a3f61a27fe80a7170026fd73eaa2108a0108 in #32. cc @JasonEtco.",
}
`;

exports[`pull-request-handler works with a string as the keyword config 1`] = `
Object {
  "body": "## I am an example title

https://github.com/JasonEtco/tests/blob/1409a3f61a27fe80a7170026fd73eaa2108a0108/.travis.yml#L10-L15

---

###### This comment was generated by [todo](https://todo.jasonet.co) based on a \`pizza\` comment in 1409a3f61a27fe80a7170026fd73eaa2108a0108 in #32. cc @JasonEtco.",
}
`;
